# ChangeLog for games-rpg/rain-slick
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-rpg/rain-slick/ChangeLog,v 1.5 2010/11/01 08:55:46 ford_prefect Exp $

*rain-slick-1.5 (01 Nov 2010)

  01 Nov 2010; Arun Raghavan <ford_prefect@gentoo.org>
  +rain-slick-1.5.ebuild:
  Bump to 1.5 for the r5 version. Fix HOMEPAGE to be version-independent as
  well.

  08 Jan 2009; Michael Sterrett <mr_bones_@gentoo.org>
  rain-slick-2.1.ebuild:
  fix up SRC_URI as mentioned by Xake in bug #250975

*rain-slick-2.1 (29 Oct 2008)
*rain-slick-1.4 (29 Oct 2008)

  29 Oct 2008; Mike Frysinger <vapier@gentoo.org> +rain-slick-1.4.ebuild,
  +rain-slick-2.1.ebuild:
  Version bump.

*rain-slick-1.2 (25 May 2008)

  25 May 2008; Mike Frysinger <vapier@gentoo.org> +rain-slick-1.2.ebuild:
  Initial ebuild by me.