@@ -1,6 +1,10 @@
 # ChangeLog for games-rpg/rain-slick
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-rpg/rain-slick/ChangeLog,v 1.5 2010/11/01 08:55:46 ford_prefect Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-rpg/rain-slick/ChangeLog,v 1.6 2011/02/07 04:48:43 vapier Exp $
+
+  07 Feb 2011; Mike Frysinger <vapier@gentoo.org> rain-slick-1.5.ebuild,
+  rain-slick-2.1.ebuild:
+  Update HOMEPAGE/SRC_URI and stabilize.
 
 *rain-slick-1.5 (01 Nov 2010)
 
